force-app/main/default/objects/Product_Interest_Lines__c/Product_Interest_Lines__c.object-meta.xml
<CustomObject>
    <label>Product Interest Lines</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Product Interest Lines  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interest Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>