force-app/main/default/objects/Product_Interest_Lines__c/fields/Adoption_Likleyhood__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Likleyhood__c</fullName>
    <label>Adoption Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>