force-app/main/default/objects/Product_Interest_Lines__c/fields/Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year__c</fullName>
    <label>Graduation Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Graduation_Year</valueSetName>
    </valueSet>
</CustomField>