force-app/main/default/objects/Product_Interest_Lines__c/fields/Outgoing_Fellow_Destination__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Fellow_Destination__c</fullName>
    <label>Outgoing Fellow Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>