force-app/main/default/objects/Product_Interest_Lines__c/fields/Outgoing_Fellows__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Fellows__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outgoing Fellows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>