force-app/main/default/objects/Product_Interest_Lines__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <referenceTo>Product_Interest__c</referenceTo>
    <relationshipLabel>Product Interest Lines</relationshipLabel>
    <relationshipName>Product_Interest_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>